fixed updating and deleting codes
